Bug 273358 - Deleting a saved playlist causes view errors
Summary: Deleting a saved playlist causes view errors
Status: RESOLVED FIXED
Alias: None
Product: amarok
Classification: Applications
Component: Playlists/Saved Playlists (other bugs)
Version First Reported In: 2.4.3
Platform: Unlisted Binaries Linux
: HI grave
Target Milestone: 2.4.1
Assignee: Amarok Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-05-15 18:37 UTC by karaluh
Modified: 2011-08-23 14:13 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.5
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description karaluh 2011-05-15 18:37:41 UTC
Version:           2.4.1
OS:                Linux

Regression, bug introduced in 2.4.1

Reproducible: Always

Steps to Reproduce:
1. Save playlist to database
2. save it one more time
3. Delete the first saved playlist

Actual Results:  
Both playlists are deleted. Amarok incorrectly calculates number of saved lists. Weird irremovable empty entries are shown.

Expected Results:  
Only selected playlist is removed. Playlist count is calculated properly. No graphical glitches are introduced.

OS: Linux (i686) release 2.6.38-9-generic
Compiler: cc
Comment 1 Myriam Schweingruber 2011-05-15 18:48:43 UTC
Ouch, that should never happen.
Comment 2 Rajeev N Bharshetty 2011-06-10 05:54:01 UTC
I Think this bug has been fixed in amarok 2.4-GIT . I am Unable to reproduce the problem in this version .
Comment 3 Myriam Schweingruber 2011-06-12 01:13:52 UTC
Thank you for the feedback.
Comment 4 karaluh 2011-08-11 09:17:46 UTC
Unfortunately, it's still there in 2.4.3. I was wrong wen saying that both playlists are deleted. The other is still there but disappears in the graphical glitch.
Comment 5 Myriam Schweingruber 2011-08-13 10:20:39 UTC
Well, then how is this a bug? Since you want to delete one and only one is deleted, it is the expected behavior. Or is this a report about a graphical glitch?
Comment 6 karaluh 2011-08-16 13:37:44 UTC
Yes, I'm talking about the glitch.
Comment 7 Myriam Schweingruber 2011-08-17 06:45:10 UTC
I can't reproduce this here at all, and the title of this bug is totally misleading. Please file a new bug that exactly describes what happens, and please provide a screenshot. Also your graphical settings (resolution, theme) will be necessary.
Comment 8 Bart Cerneels 2011-08-23 14:13:39 UTC
Git commit 16b9914ac650778ffc18b9a2a58708bdc5a6973a by Bart Cerneels.
Committed on 23/08/2011 at 16:12.
Pushed by shanachie into branch 'master'.

Fix errors in the view when removing playlist.

BUG: 273358

M  +2    -1    src/browsers/playlistbrowser/QtGroupingProxy.h
M  +22   -8    src/browsers/playlistbrowser/QtGroupingProxy.cpp
M  +1    -0    ChangeLog

http://commits.kde.org/amarok/16b9914ac650778ffc18b9a2a58708bdc5a6973a