Fix errors in the view when removing playlist.

BUG: 273358